--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="container my-5 py-5">
                     <div class="row align-items-center g-5">
                         <div class="col-lg-6 text-center text-lg-start">
-                            <h1 class="display-3 text-white animated slideInLeft">PRGG 2025<br>RW 46 Dusun Kayen</h1>
+                            <h1 class="display-5 text-white animated slideInLeft">Basis Data<br>RW.46 Dusun Kayen</h1>
                             <p class="text-white animated slideInLeft mb-4 pb-2">Sinkronisasi Basis Data Spasial Bidang Tanah dan Bangunan Rumah RW 46, Dusun Kayen, Kelurahan Condongcatur, Depok, Sleman dengan Sertifikat Kepemilikan Hak Atas Tanah dan Surat Pemberitahuan Pajak Terutang (SPPT)</p>
                             <a href="" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft">Book A Table</a>
                         </div>
