--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
-                    <a href="" class="btn btn-primary py-2 px-4">Book A Table</a>
+                    <a href="" class="btn btn-primary py-2 px-4">Data Desa</a>
                 </div>
             </nav>
 
@@ -75,7 +75,7 @@
                             <h1 class="display-5 text-white animated slideInLeft">Basis Data<br>RW.46 Dusun Kayen</h1>
                             <h1 class="display-6 text-white animated slideInLeft">Kelurahan Condongcatur, Depok, Sleman</h1>
                             <p class="text-white animated slideInLeft mb-4 pb-2">Sinkronisasi Basis Data Spasial Bidang Tanah dan Bangunan Rumah RW 46, Dusun Kayen, Kelurahan Condongcatur, Depok, Sleman dengan Sertifikat Kepemilikan Hak Atas Tanah dan Surat Pemberitahuan Pajak Terutang (SPPT)</p>
-                            <a href="" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft">Book A Table</a>
+                            <a href="" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft">Data Desa</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-end overflow-hidden">
                             <img class="img-fluid" src="img/hero.png" alt="">
